--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@storybook/testing-library": "^0.0.13",
     "babel-loader": "^8.3.0",
     "sb": "^6.5.16",
+    "storybook-addon-next": "^1.7.2",
     "webpack": "^5.75.0"
   }
 }
