--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^13.2.3",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "styled-components": "^5.3.6",
+    "styled-reset": "^4.4.5",
     "typescript": "4.9.5"
   },
   "devDependencies": {
@@ -32,6 +36,7 @@
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@types/styled-components": "^5.1.26",
     "babel-loader": "^8.3.0",
     "sb": "^6.5.16",
     "storybook-addon-next": "^1.7.2",
