--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "^13.2.3",
+    "@storybook/addon-docs": "^6.5.16",
+    "@storybook/addon-storysource": "^6.5.16",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
     "next": "13.2.1",
@@ -39,6 +40,7 @@
     "@storybook/testing-library": "^0.0.13",
     "@types/styled-components": "^5.1.26",
     "babel-loader": "^8.3.0",
+    "babel-plugin-styled-components": "^2.0.7",
     "chromatic": "^6.17.1",
     "sb": "^6.5.16",
     "storybook-addon-next": "^1.7.2",
