--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@next/bundle-analyzer": "^13.2.3",
     "@storybook/addon-docs": "^6.5.16",
+    "@storybook/addon-storyshots": "^6.5.16",
     "@storybook/addon-storysource": "^6.5.16",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
+    "@storybook/addon-a11y": "^6.5.16",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
@@ -44,7 +46,9 @@
     "babel-plugin-styled-components": "^2.0.7",
     "chromatic": "^6.17.1",
     "sb": "^6.5.16",
+    "storybook-addon-designs": "^6.3.1",
     "storybook-addon-next": "^1.7.2",
+    "storybook-readme": "^5.0.9",
     "webpack": "^5.75.0"
   },
   "readme": "ERROR: No README data found!",
