--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "chromatic": "npx chromatic --project-token=080ee95a30fe"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.12",
     "@next/bundle-analyzer": "^13.2.3",
     "@storybook/addon-docs": "^6.5.16",
     "@storybook/addon-storyshots": "^6.5.16",
@@ -42,9 +45,12 @@
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
     "@types/styled-components": "^5.1.26",
+    "@whitespace/storybook-addon-html": "^5.1.3",
     "babel-loader": "^8.3.0",
     "babel-plugin-styled-components": "^2.0.7",
     "chromatic": "^6.17.1",
+    "prettier": "^2.8.4",
+    "react-syntax-highlighter": "^15.5.0",
     "sb": "^6.5.16",
     "storybook-addon-designs": "^6.3.1",
     "storybook-addon-next": "^1.7.2",
