--- a/package.json
+++ b/package.json
@@ -14,20 +14,27 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
     "@next/bundle-analyzer": "^13.2.3",
+    "@reduxjs/toolkit": "^1.9.3",
     "@storybook/addon-docs": "^6.5.16",
     "@storybook/addon-storyshots": "^6.5.16",
     "@storybook/addon-storysource": "^6.5.16",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-redux": "^7.1.25",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
     "next": "13.2.1",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.5",
     "typescript": "4.9.5"
@@ -44,6 +51,7 @@
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@types/redux-logger": "^3.0.9",
     "@types/styled-components": "^5.1.26",
     "@whitespace/storybook-addon-html": "^5.1.3",
     "babel-loader": "^8.3.0",
