--- a/package.json
+++ b/package.json
@@ -1,70 +1,70 @@
 {
-  "name": "start-storybook",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "storybook": "start-storybook -p 6006 -s ./public",
-    "build-storybook": "build-storybook -s public",
-    "chromatic": "npx chromatic --project-token=080ee95a30fe"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.12",
-    "@next/bundle-analyzer": "^13.2.3",
-    "@reduxjs/toolkit": "^1.9.3",
-    "@storybook/addon-docs": "^6.5.16",
-    "@storybook/addon-storyshots": "^6.5.16",
-    "@storybook/addon-storysource": "^6.5.16",
-    "@types/node": "18.14.1",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@types/react-redux": "^7.1.25",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.2.1",
-    "next": "13.2.1",
-    "next-redux-wrapper": "^8.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
-    "react-redux": "^8.0.5",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "styled-components": "^5.3.6",
-    "styled-reset": "^4.4.5",
-    "typescript": "4.9.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.21.0",
-    "@storybook/addon-a11y": "^6.5.16",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-interactions": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
-    "@storybook/jest": "^0.0.10",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/react": "^6.5.16",
-    "@storybook/testing-library": "^0.0.13",
-    "@types/redux-logger": "^3.0.9",
-    "@types/styled-components": "^5.1.26",
-    "@whitespace/storybook-addon-html": "^5.1.3",
-    "babel-loader": "^8.3.0",
-    "babel-plugin-styled-components": "^2.0.7",
-    "chromatic": "^6.17.1",
-    "prettier": "^2.8.4",
-    "react-syntax-highlighter": "^15.5.0",
-    "sb": "^6.5.16",
-    "storybook-addon-designs": "^6.3.1",
-    "storybook-addon-next": "^1.7.2",
-    "storybook-readme": "^5.0.9",
-    "webpack": "^5.75.0"
-  },
-  "readme": "ERROR: No README data found!",
-  "_id": "start-storybook@0.1.0"
+    "name": "start-storybook",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "storybook": "start-storybook -p 6006 -s ./public",
+        "build-storybook": "build-storybook -s public",
+        "chromatic": "npx chromatic --project-token=080ee95a30fe"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
+        "@mui/icons-material": "^5.11.11",
+        "@mui/material": "^5.11.12",
+        "@next/bundle-analyzer": "^13.2.3",
+        "@reduxjs/toolkit": "^1.9.3",
+        "@storybook/addon-docs": "^6.5.16",
+        "@storybook/addon-storyshots": "^6.5.16",
+        "@storybook/addon-storysource": "^6.5.16",
+        "@types/node": "18.14.1",
+        "@types/react": "18.0.28",
+        "@types/react-dom": "18.0.11",
+        "@types/react-redux": "^7.1.25",
+        "eslint": "8.34.0",
+        "eslint-config-next": "^13.0.6",
+        "next": "13.0.6",
+        "next-redux-wrapper": "^8.1.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-icons": "^4.7.1",
+        "react-redux": "^8.0.5",
+        "redux-logger": "^3.0.6",
+        "redux-persist": "^6.0.0",
+        "styled-components": "^5.3.6",
+        "styled-reset": "^4.4.5",
+        "typescript": "4.9.5"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.21.0",
+        "@storybook/addon-a11y": "^6.5.16",
+        "@storybook/addon-actions": "^6.5.16",
+        "@storybook/addon-essentials": "^6.5.16",
+        "@storybook/addon-interactions": "^6.5.16",
+        "@storybook/addon-links": "^6.5.16",
+        "@storybook/builder-webpack5": "^6.5.16",
+        "@storybook/jest": "^0.0.10",
+        "@storybook/manager-webpack5": "^6.5.16",
+        "@storybook/react": "^6.5.16",
+        "@storybook/testing-library": "^0.0.13",
+        "@types/redux-logger": "^3.0.9",
+        "@types/styled-components": "^5.1.26",
+        "@whitespace/storybook-addon-html": "^5.1.3",
+        "babel-loader": "^8.3.0",
+        "babel-plugin-styled-components": "^2.0.7",
+        "chromatic": "^6.17.1",
+        "prettier": "^2.8.4",
+        "react-syntax-highlighter": "^15.5.0",
+        "sb": "^6.5.16",
+        "storybook-addon-designs": "^6.3.1",
+        "storybook-addon-next": "^1.7.2",
+        "storybook-readme": "^5.0.9",
+        "webpack": "^5.75.0"
+    },
+    "readme": "ERROR: No README data found!",
+    "_id": "start-storybook@0.1.0"
 }
