--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "^4.7.1",
+        "react-query": "^3.39.3",
         "react-redux": "^8.0.5",
         "redux-logger": "^3.0.6",
         "redux-persist": "^6.0.0",
